--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@material-tailwind/react": "^2.1.0",
+    "react-hot-toast": "^2.4.1",
     "autoprefixer": "10.4.15",
     "flowbite-react": "^0.5.0",
     "framer-motion": "^10.16.1",
